# cruel-world-hs

./: README.md
CruelWorld/: CruelWorld.cabal  README.md
CruelWorld/app/: Main.hs
CruelWorld/src/: Attacker.hs  Creature.hs  Goblin.hs  Lib.hs  Weapon.hs
CruelWorld/test/: GoblinSpec.hs  LibSpec.hs  WeaponSpec.hs
src/: Attacker.hs  Goblin.hs
test/: AttackerSpec.hs  GoblinSpec.hs  WeaponSpec.hs
