name:                CruelWorld
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/StanislavKhalash/cruel-world-hs/tree/master/CruelWorld#readme
license:             MIT
license-file:        LICENSE
author:              Stanislav Khalash
maintainer:          stanislav.khalash@gmail.com
copyright:           Copyright (c) 2017 Stanislav Khalash
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Creature
                     , Goblin   
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable CruelWorld-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CruelWorld
  default-language:    Haskell2010

test-suite CruelWorld-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:     GoblinSpec 
  build-depends:       base
                     , hspec == 2.*
                     , CruelWorld
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/CruelWorld
